# sensors3140

./: .gitignore  Info.txt  LICENSE  MANIFEST.in  README.md  __main__.py  install.sh  nt_server.py  pyproject.toml  rplidar.json  rplidar.md  setup.py  start.sh  status.sh  stop.sh
RPLidar Test Scripts/: RPLidarTestScript.py  SimpleRPLidarTestScript.py
config/: apriltag.json  rplidar.json  rplidar.service  sensors3140.service
config/cameras/: camera_logitech_720p.json  camera_logitech_720p_240.json  camera_macbook_720.json  camera_rpi_v21_320.json  camera_rpi_v21_640.json  camera_rpi_v21_720.json
doc/: AprilTagLocalization.md  apriltag_performance.md
examples/camera/: opencv_streaming.py  pynetworktables_client.py  pynetworktables_server.py  v4l_connections.md
python/sensors3140/: __init__.py  __main__.py  task_base.py
python/sensors3140/apriltag/: __main__.py  detector.py
python/sensors3140/apriltag/maps/: map.py  nt_map.py
python/sensors3140/apriltags/: detector.py
python/sensors3140/calibrate/: __main__.py  calibrate_camera.py
python/sensors3140/camera/: __init__.py  camera.py  opencv.py  scan.py  streaming_server.py  streaming_task.py
python/sensors3140/grount_plane/: project.py
python/sensors3140/maps/: __init__.py  __main__.py  base_map_display.py  field_map.py  live_map_display.py  maps.py  nt_map.py
python/sensors3140/rplidar/: __main__.py
python/sensors3140/tables/: __init__.py  network_tables.py  server.py
